{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 328,
  "lineage": "60b53865-c2e4-5bca-704f-aa674b69688d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "patty_moore_website_nat_gateway_eip_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f87795c4ed5e9e8c",
            "arn": "arn:aws:ec2:us-east-1:124355668391:elastic-ip/eipalloc-0f87795c4ed5e9e8c",
            "domain": "vpc",
            "id": "eipalloc-0f87795c4ed5e9e8c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-212-93.compute-1.amazonaws.com",
            "public_ip": "52.70.212.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "patty_moore_website_EIP"
            },
            "tags_all": {
              "Name": "patty_moore_website_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "patty_moore_website",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a6f770277670015",
            "arn": "arn:aws:ec2:us-east-1:124355668391:instance/i-0b41fdf5b635aaff6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b41fdf5b635aaff6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "patty_more_key01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc506896f232e710",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-184-72-173-122.compute-1.amazonaws.com",
            "public_ip": "184.72.173.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b67eef48e8d36246",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d150a12a7806f69",
            "tags": {
              "Name": "patty_moore_instance"
            },
            "tags_all": {
              "Name": "patty_moore_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6a829a3752d3ecd"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_security_group.patty_moore_sg",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "patty_moore_website_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:internet-gateway/igw-06fb8ba176afdbee1",
            "id": "igw-06fb8ba176afdbee1",
            "owner_id": "124355668391",
            "tags": {
              "Name": "patty_moore_vpc"
            },
            "tags_all": {
              "Name": "patty_moore_vpc"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:loadbalancer/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7",
            "arn_suffix": "app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20250424201905180800000005-371601952.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355668391:loadbalancer/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20250424201905180800000005",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fc10be15109387f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d150a12a7806f69"
              },
              {
                "subnet_id": "subnet-0bfc74ce05aa0791a"
              }
            ],
            "subnets": [
              "subnet-09d150a12a7806f69",
              "subnet-0bfc74ce05aa0791a"
            ],
            "tags": {
              "Name": "application_loadbalancer"
            },
            "tags_all": {
              "Name": "application_loadbalancer"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_security_group.patty_moore_alb_sg",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1b",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:listener/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7/bee7f8d3b89e85d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355668391:listener/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7/bee7f8d3b89e85d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:loadbalancer/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_lb.application_load_balancer",
            "aws_security_group.patty_moore_alb_sg",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1b",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:listener/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7/acf2fcad1d7b1211",
            "certificate_arn": "arn:aws:acm:us-east-1:124355668391:certificate/f701098f-69f0-452c-8c6e-9b67fbdabed5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:targetgroup/pattymooreTG/b385907fdd83ec47",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355668391:listener/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7/acf2fcad1d7b1211",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:loadbalancer/app/tf-lb-20250424201905180800000005/5e6c2b7ea9c58cb7",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_lb.application_load_balancer",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.patty_moore_alb_sg",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1b",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:targetgroup/pattymooreTG/b385907fdd83ec47",
            "arn_suffix": "targetgroup/pattymooreTG/b385907fdd83ec47",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355668391:targetgroup/pattymooreTG/b385907fdd83ec47",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pattymooreTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "patty_moore_website_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355668391:targetgroup/pattymooreTG/b385907fdd83ec47-20250424201918423800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:124355668391:targetgroup/pattymooreTG/b385907fdd83ec47",
            "target_id": "i-0b41fdf5b635aaff6"
          },
          "dependencies": [
            "aws_instance.patty_moore_website",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.patty_moore_sg",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "patty_moore_website_nat_gateway_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f87795c4ed5e9e8c",
            "association_id": "eipassoc-0964da352166cdebc",
            "connectivity_type": "public",
            "id": "nat-0b2f295129bf2a6af",
            "network_interface_id": "eni-029b5a167208e87c7",
            "private_ip": "10.0.1.71",
            "public_ip": "52.70.212.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d150a12a7806f69",
            "tags": {
              "Name": "patty_moore_website_nat_gateway_az1a"
            },
            "tags_all": {
              "Name": "patty_moore_website_nat_gateway_az1a"
            }
          },
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_website_private_DB_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:route-table/rtb-01527714b23fac727",
            "id": "rtb-01527714b23fac727",
            "owner_id": "124355668391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b2f295129bf2a6af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Private Database Subnets"
            },
            "tags_all": {
              "Name": "Route Table for Private Database Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_website_private_app_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:route-table/rtb-0ed59f3326c58ebfb",
            "id": "rtb-0ed59f3326c58ebfb",
            "owner_id": "124355668391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b2f295129bf2a6af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Private App Subnets"
            },
            "tags_all": {
              "Name": "Route Table for Private App Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_website_publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:route-table/rtb-07cf5677f68009416",
            "id": "rtb-07cf5677f68009416",
            "owner_id": "124355668391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fb8ba176afdbee1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet az1a RT"
            },
            "tags_all": {
              "Name": "public subnet az1a RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d34be459110279a",
            "route_table_id": "rtb-0ed59f3326c58ebfb",
            "subnet_id": "subnet-069f2ec3a8e0265fc"
          },
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_route_table.patty_moore_website_private_app_RT",
            "aws_subnet.patty_moore_website_private_app_subnet_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a4f161b28aca40",
            "route_table_id": "rtb-0ed59f3326c58ebfb",
            "subnet_id": "subnet-0918d2bda792c1d65"
          },
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_route_table.patty_moore_website_private_app_RT",
            "aws_subnet.patty_moore_website_private_app_subnet_az1b",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203cd96307cb3189",
            "route_table_id": "rtb-01527714b23fac727",
            "subnet_id": "subnet-0d88ba3a18ff01757"
          },
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_route_table.patty_moore_website_private_DB_RT",
            "aws_subnet.patty_moore_website_private_DB_subnet_az1a",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079688c967b8e7f1a",
            "route_table_id": "rtb-01527714b23fac727",
            "subnet_id": "subnet-0373f798619ac977b"
          },
          "dependencies": [
            "aws_eip.patty_moore_website_nat_gateway_eip_az1a",
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_nat_gateway.patty_moore_website_nat_gateway_az1a",
            "aws_route_table.patty_moore_website_private_DB_RT",
            "aws_subnet.patty_moore_website_private_DB_subnet_az1b",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1c2eea7df906ee0",
            "route_table_id": "rtb-07cf5677f68009416",
            "subnet_id": "subnet-09d150a12a7806f69"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_route_table.patty_moore_website_publicRT",
            "aws_subnet.patty_moore_website_public_subnet_az1a",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e1360ec69cb32b1",
            "route_table_id": "rtb-07cf5677f68009416",
            "subnet_id": "subnet-0bfc74ce05aa0791a"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_route_table.patty_moore_website_publicRT",
            "aws_subnet.patty_moore_website_public_subnet_az1b",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "patty_moore_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:security-group/sg-0fc10be15109387f1",
            "description": "Enable HTTP/HTTPS access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc10be15109387f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "patty_moore_alb_sg",
            "name_prefix": "",
            "owner_id": "124355668391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "patty_moore_alb_sg"
            },
            "tags_all": {
              "Name": "patty_moore_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "patty_moore_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:security-group/sg-0f6a829a3752d3ecd",
            "description": "Allow Internet access to the web server http port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6a829a3752d3ecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "patty_moore_website_sg",
            "name_prefix": "",
            "owner_id": "124355668391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "patty_moore_website_sg"
            },
            "tags_all": {
              "Name": "patty_moore_website_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_private_DB_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-0d88ba3a18ff01757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d88ba3a18ff01757",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_private_DB_subnet-az1a"
            },
            "tags_all": {
              "Name": "patty_moore_website_private_DB_subnet-az1a"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_private_DB_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-0373f798619ac977b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0373f798619ac977b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_private_DB_subnet-az1b"
            },
            "tags_all": {
              "Name": "patty_moore_website_private_DB_subnet-az1b"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_private_app_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-069f2ec3a8e0265fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069f2ec3a8e0265fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_private_app_subnet_az1a"
            },
            "tags_all": {
              "Name": "patty_moore_website_private_app_subnet_az1a"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_private_app_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-0918d2bda792c1d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918d2bda792c1d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_private_app_subnet_az1b"
            },
            "tags_all": {
              "Name": "patty_moore_website_private_app_subnet_az1b"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_public_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-09d150a12a7806f69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d150a12a7806f69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_public_subnet-az1a"
            },
            "tags_all": {
              "Name": "patty_moore_website_public_subnet-az1a"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_website_public_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:subnet/subnet-0bfc74ce05aa0791a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfc74ce05aa0791a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124355668391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_website_public_subnet-az1b"
            },
            "tags_all": {
              "Name": "patty_moore_website_public_subnet-az1b"
            },
            "vpc_id": "vpc-094e8d6a28a95bb29"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_website_vpc_igw",
            "aws_vpc.patty_moore_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "patty_moore_website_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355668391:vpc/vpc-094e8d6a28a95bb29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033ef118632838c0f",
            "default_route_table_id": "rtb-02826e743b2aca01e",
            "default_security_group_id": "sg-0e536d42b9f7b962b",
            "dhcp_options_id": "dopt-0a3fc226a75674d0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094e8d6a28a95bb29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02826e743b2aca01e",
            "owner_id": "124355668391",
            "tags": {
              "Name": "patty_moore_website_vpc"
            },
            "tags_all": {
              "Name": "patty_moore_website_vpc"
            }
          }
        }
      ]
    }
  ]
}